# aitop

./: Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-06-23-spec-a-metrics-top-panel.md  2026-06-23-spec-b-activity-stream.md  2026-06-23-spec-c-agent-swimlane.md  2026-06-23-tail-feed-inline-diffs.md
docs/superpowers/specs/: 2026-06-23-spec-a-metrics-top-panel-design.md  2026-06-23-spec-b-activity-stream-design.md  2026-06-23-spec-c-agent-swimlane-design.md  2026-06-23-tail-feed-inline-diffs-design.md
scripts/: install.sh
src/: activity.rs  app.rs  codex.rs  dashboard.rs  diffview.rs  feed.rs  git.rs  lib.rs  main.rs  metrics.rs  model.rs  pricing.rs  process.rs  spectrum.rs
src/sources/: claude.rs
tests/: ambient_parsing.rs  feed_parsing.rs
