[package]
name = "aitop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
directories = "5"
ratatui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version = "2", features = ["inline"] }
sysinfo = "0.30"
syntect = "5"

[dev-dependencies]
tempfile = "3"
